--- a/index.html
+++ b/index.html
@@ -404,13 +404,13 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item pb-0">
-            <h4>Alice Barkley</h4>
-            <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+            <h4>Tourist</h4>
+            <p><em>Innovative and Task-driven Electronic Hobbyist with 15+ years of experience in designing and developing Creative Embedded & Software Projects from initial concept to final, polished deliverable.</em></p>
             <p>
             <ul>
-              <li>Portland par 127,Orlando, FL</li>
-              <li>(123) 456-7891</li>
-              <li>alice.barkley@example.com</li>
+              <li>Guntur, Andhra Pradesh</li>
+              <li>(+91) 7093374664</li>
+              <li>sr.school.of.knowledge@gmail.com</li>
             </ul>
             </p>
           </div>
