--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
           <div class="resume-item">
             <h4>Master of Technology</h4>
             <h5>2010 - 2012</h5>
-            <p><em>The main objectives of this course are to analyze the electrical and design characteristics of transistors and gates and to study the issues and methodologies involved in the integration of these devices into complex high-performance systems.</p>
+            <p><em>The main objectives of this course is to analyze the electrical and design characteristics of transistors and gates and to study the issues and methodologies involved in the integration of these devices into complex high-performance systems.</p>
           </div>
           <div class="resume-item">
             <h4>Bachelor of Technology</h4>
