--- a/index.html
+++ b/index.html
@@ -417,12 +417,12 @@
 
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>Master of Technology</h4>
+            <h4>Master of Technology - VLSI</h4>
             <h5>2010 - 2012</h5>
             <p><em>The main objectives of this course is to analyze the electrical and design characteristics of transistors and gates and to study the issues and methodologies involved in the integration of these devices into complex high-performance systems.</p>
           </div>
           <div class="resume-item">
-            <h4>Bachelor of Technology</h4>
+            <h4>Bachelor of Technology - ECE</h4>
             <h5>2001 - 2005</h5>
             <p><em>Sri venkateswara College of Engineering, Tirupathi</em></p>
             <p>The main objectives of this course is to Identify complex Electronics and Communication Engineering problems, formulate, analyze, design and provide solution for them. Apply appropriate techniques, skills, and modern tools for the design and analysis of engineering systems.</p>
