--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bxl-dribbble"></i></div>
             <h4><a href="">Embedded - C</a></h4>
-            <p>Embedded C is just the extension variant of the C language. This programming language is hardware independent</p>
+            <p align="justify">Embedded C is just the extension variant of the C language. This programming language is hardware independent</p>
           </div>
         </div>
 
@@ -489,7 +489,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-file"></i></div>
             <h4><a href="">Java</a></h4>
-            <p>Java is the "King of all programming languages". Since its foundation, this language has become a backbone for billions of devices and applications.</p>
+            <p align="justify">Java is the "King of all programming languages". Since its foundation, this language has become a backbone for billions of devices and applications.</p>
           </div>
         </div>
 
@@ -497,7 +497,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-tachometer"></i></div>
             <h4><a href="">C#.Net</a></h4>
-            <p>.NET is an open-source platform for building desktop, web, and mobile applications that can run natively on any operating system</p>
+            <p align="justify">.NET is an open-source platform for building desktop, web, and mobile applications that can run natively on any operating system</p>
           </div>
         </div>
 
@@ -505,7 +505,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-world"></i></div>
             <h4><a href="">Raspberry - Pi</a></h4>
-            <p> Raspberry - Pi became a popular and easy to experiment tool to develop school projects, hardware programming, robotics, basic automated machines, circuits, etc.</p>
+            <p align="justify"> Raspberry - Pi became a popular and easy to experiment tool to develop school projects, hardware programming, robotics, basic automated machines, circuits, etc.</p>
           </div>
         </div>
 
@@ -513,7 +513,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-slideshow"></i></div>
             <h4><a href="">Arduino</a></h4>
-            <p>Arduinos are excellent for beginner and intermediate robotics projects. They are powerful enough to be able to give the basic commands the robot needs to function, while keeping their limited resources focused on the tasks at hand.</p>
+            <p align="justify">Arduinos are excellent for beginner and intermediate robotics projects. They are powerful enough to be able to give the basic commands the robot needs to function, while keeping their limited resources focused on the tasks at hand.</p>
           </div>
         </div>
 
@@ -521,7 +521,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-arch"></i></div>
             <h4><a href="">Raspi -Pico</a></h4>
-            <p>As a microcontroller, the Raspberry Pi Pico can be used in many projects, be it Internet of Things (IoT), Adafruit Neopixel projects, data logging, small to medium scale robotics, projects needing interfacing with cameras, analog sensing (using environment sensors) and more.</p>
+            <p align="justify">As a microcontroller, the Raspberry Pi Pico can be used in many projects, be it Internet of Things (IoT), Adafruit Neopixel projects, data logging, small to medium scale robotics, projects needing interfacing with cameras, analog sensing (using environment sensors) and more.</p>
           </div>
         </div>
 
@@ -698,7 +698,10 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>A108 Adam Street, New York, NY 535022</p>
+           
+              <p>Guntur, Andhra Pradesh</p>
+            
+            </ul>
           </div>
         </div>
 
@@ -706,13 +709,13 @@
           <div class="info-box">
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
-            <div class="social-links">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="youtube"><i class="bi bi-youtube"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-            </div>
+             <div class="social-links">
+        <a href="https://twitter.com/SR_Project_Free" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://www.facebook.com/sr.school.of.knowledge" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/sr.school.of.knowledge" class="instagram"><i class="bi bi-instagram"></i></a>
+		<a href="https://tinyurl.com/SR-Charity" class="youtube"><i class="bi bi-youtube"></i></a>
+        <a href="https://www.linkedin.com/in/sr-school-of-knowledge" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      </div>
           </div>
         </div>
 
