--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
-            <div class="icon"><i class="bx bxl-dribbble"></i></div>
+            <div class="icon"><i class="bx bx:desktop"></i></div>
             <h4><a href="">Embedded - C</a></h4>
             <p align="justify">Embedded C is just the extension variant of the C language. This programming language is hardware independent</p>
           </div>
@@ -487,7 +487,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-file"></i></div>
+            <div class="icon"><i class="bx bx:atom"></i></div>
             <h4><a href="">Java</a></h4>
             <p align="justify">Java is the "King of all programming languages". Since its foundation, this language has become a backbone for billions of devices and applications.</p>
           </div>
@@ -495,7 +495,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-tachometer"></i></div>
+            <div class="icon"><i class="bx bx:desktop"></i></div>
             <h4><a href="">C#.Net</a></h4>
             <p align="justify">.NET is an open-source platform for building desktop, web, and mobile applications that can run natively on any operating system</p>
           </div>
@@ -503,7 +503,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-world"></i></div>
+            <div class="icon"><i class="bx bx:chip"></i></div>
             <h4><a href="">Raspberry - Pi</a></h4>
             <p align="justify"> Raspberry - Pi became a popular and easy to experiment tool to develop school projects, hardware programming, robotics, basic automated machines, circuits, etc.</p>
           </div>
@@ -511,7 +511,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-slideshow"></i></div>
+            <div class="icon"><i class="bx bx:chip"></i></div>
             <h4><a href="">Arduino</a></h4>
             <p align="justify">Arduinos are excellent for beginner and intermediate robotics projects. They are powerful enough to be able to give the basic commands the robot needs to function, while keeping their limited resources focused on the tasks at hand.</p>
           </div>
@@ -519,7 +519,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-arch"></i></div>
+            <div class="icon"><i class="bx bx:chip"></i></div>
             <h4><a href="">Raspi -Pico</a></h4>
             <p align="justify">As a microcontroller, the Raspberry Pi Pico can be used in many projects, be it Internet of Things (IoT), Adafruit Neopixel projects, data logging, small to medium scale robotics, projects needing interfacing with cameras, analog sensing (using environment sensors) and more.</p>
           </div>
